fix(NgScrollbar): Fix scrollbar view on dynamic height, closes #72

--- a/projects/ngx-scrollbar/src/scrollbar/ng-scrollbar.scss
+++ b/projects/ngx-scrollbar/src/scrollbar/ng-scrollbar.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   position: relative;
-  height: 100%;
+  min-height: 100%;
   overflow: hidden !important;
   /** Auto hide scrollbars */
   ::ng-deep {
@@ -18,19 +18,18 @@
   }
 }
 
-.ng-scrollbar-container {
+.ng-scrollbar-container,
+.ng-scrollbar-view {
   position: relative;
+}
+
+.ng-scrollbar-container {
   overflow: hidden !important;
   width: 100%;
   height: 100%;
 }
 
 .ng-scrollbar-view {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
   overflow: auto;
   transform: translate3d(0, 0, 0);
   -webkit-overflow-scrolling: touch;
